src/test/resources/amyc/parser/failing/MissingOperand.grading.amy
object Operand
  true || (x && )
end Operand
